--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^4.14.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
