--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_sign_in: ^6.2.1
   cloud_firestore: ^4.14.0
   cached_network_image: ^3.3.1
+  fluttertoast: ^8.2.4
+  image_picker: ^1.0.7
+  firebase_storage: ^11.6.1
 
 dev_dependencies:
   flutter_test:
