--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.2.4
   image_picker: ^1.0.7
   firebase_storage: ^11.6.1
+  emoji_picker_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
